--- a/.github/workflows/complete-workflow.yml
+++ b/.github/workflows/complete-workflow.yml
@@ -14,7 +14,7 @@ jobs:
           distribution: "temurin"
           cache: maven
       - name: Build with Maven cloud
-        run: mvn -B verify sonar:sonar -Dsonar.projectKey=javaprojectreachability -Dsonar.organization=b4ssey -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
+        run: mvn -B verify sonar:sonar -Dsonar.projectKey=b4ssey -Dsonar.organization=javaprojectreachabililty -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
