--- a/.github/workflows/complete-workflow.yml
+++ b/.github/workflows/complete-workflow.yml
@@ -17,6 +17,7 @@ jobs:
           cache: maven
       - name: Analyze with SonarCloud
         uses: sonarsource/sonarcloud-github-action@master
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Pcoverage
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
