--- a/.github/workflows/complete-workflow.yml
+++ b/.github/workflows/complete-workflow.yml
@@ -16,7 +16,7 @@ jobs:
           distribution: "temurin"
           cache: maven
       - name: Analyze with SonarCloud
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
