--- a/.github/workflows/complete-workflow.yml
+++ b/.github/workflows/complete-workflow.yml
@@ -2,24 +2,24 @@ name: Build code, run unit test, run SAST, SCA, DAST security scans
 on: push
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    name: Run unit tests and SAST scan on the source code
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: "11"
-          distribution: "temurin"
-          cache: maven
-      - name: Analyze with SonarCloud
-        run: mvn -B verify sonar:sonar
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  # build:
+  #   runs-on: ubuntu-latest
+  #   name: Run unit tests and SAST scan on the source code
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #       with:
+  #         fetch-depth: 0
+  #     - name: Set up JDK 11
+  #       uses: actions/setup-java@v2
+  #       with:
+  #         java-version: "11"
+  #         distribution: "temurin"
+  #         cache: maven
+  #     - name: Analyze with SonarCloud
+  #       run: mvn -B verify sonar:sonar
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   security:
     runs-on: ubuntu-latest
     # needs: build
