--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,5 @@
 sonar.organization=devSecOpsUdemy
 sonar.projectKey=b4ssey
+Dsonar.organization=javaprojectreachability 
+Dsonar.host.url=https://sonarcloud.io 
+Dsonar.login=secrets.SONAR_TOKEN
