--- a/.github/workflows/complete-workflow.yml
+++ b/.github/workflows/complete-workflow.yml
@@ -15,11 +15,11 @@ jobs:
           java-version: "11"
           distribution: "temurin"
           cache: maven
-      - name: Analyze with SonarCloud
-        run: mvn -B verify sonar:sonar -Dsonar.organization=devSecOpsUdemy -Dsonar.projectKey=b4ssey -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=SONAR_TOKEN
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      # - name: Analyze with SonarCloud
+      #   run: mvn -B verify sonar:sonar -Dsonar.organization=devSecOpsUdemy -Dsonar.projectKey=b4ssey -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=SONAR_TOKEN
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   security:
     runs-on: ubuntu-latest
     # needs: build
